--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,7 @@
 @import 'components/tags';
 @import 'components/instagram';
 @import 'components/introduction';
+@import 'components/projects';
 
 @import 'components/alternating_rows';
 @import 'components/slideshow';
