--- a/css/variables/_variables.scss
+++ b/css/variables/_variables.scss
@@ -1,12 +1,15 @@
 //Colors
-$color-0: #000;
-$color-1: #ef4538;
-$color-2: blue;
-$color-3: green;
+$color-0: #000000;
+$color-1: #005FAA;
+$color-2: #445C6F;
+$color-3: #34495E;
 
 $color-grey-1: #f1f2f3;
 $color-grey-2: #f8f8f8;
 $color-grey-3: #424242;
+
+$font-0: 'Hind', sans-serif;
+$font-1: 'Montserrat', sans-serif;
 
 //Box Shadow
 $box-shadow-1: 0 2px 4px 0 rgba(50,50,93,.1);
