--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 /*Formstack Colors*/
 .fsBody .fsForm input[type=submit] {
-  background: #ef4538 !important;
+  background: #005FAA !important;
   color: #fff !important;
   padding: 1em 1.5em !important;
   border-radius: 0.25em !important;
 }
 
 .fsBody .fsForm input[type=submit]:hover {
-  background: blue !important;
+  background: #445C6F !important;
 }
 
 .fsBody .fsForm .fsField[type="radio"]:checked,
 .fsBody .fsForm .fsField[type="checkbox"]:checked {
-  border-color: #ef4538 !important;
+  border-color: #005FAA !important;
 }
 
 .fsBody .fsForm .fsField[type="radio"]::before,
 .fsBody .fsForm .fsField[type="checkbox"]::before {
-  background: #ef4538 !important;
+  background: #005FAA !important;
 }
 
 .fsBody .fsForm .fsField[type="radio"]::after {
@@ -29,7 +29,7 @@
 }
 
 .fsBody .fsForm .fsField:focus {
-  border-color: #ef4538 !important;
+  border-color: #005FAA !important;
   background: #fbfbfb !important;
   outline: none;
 }
@@ -392,9 +392,9 @@ html.wf-inactive {
 }
 
 body {
-  color: #000;
+  color: #000000;
   background: #f1f2f3;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Hind", sans-serif;
   font-size: 16px;
   font-size: 1rem;
 }
@@ -444,10 +444,11 @@ p:last-of-type {
 }
 
 a {
-  color: #ef4538;
+  color: #005FAA;
 }
 
 h1 {
+  text-transform: uppercase;
   font-weight: 600;
 }
 
@@ -558,6 +559,7 @@ h3 {
 h1,
 h2,
 h3 {
+  font-family: "Montserrat", sans-serif;
   margin: 0 0 0.25em;
   width: 100%;
 }
@@ -591,7 +593,7 @@ blockquote {
 
 blockquote::before,
 blockquote::after {
-  color: #ef4538;
+  color: #005FAA;
   font-family: 'Font Awesome 5 Pro';
   font-weight: 900;
   position: absolute;
@@ -667,17 +669,18 @@ hr::before {
 }
 
 ::selection {
-  background: #ef4538;
+  background: #005FAA;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #ef4538;
+  background: #005FAA;
   color: #fff;
 }
 
 .header .container {
   position: relative;
+  padding: 0.5em 1em 0;
 }
 
 .header .group {
@@ -771,18 +774,18 @@ hr::before {
   font-size: 16px;
   font-size: 1rem;
   display: block;
-  color: #000;
+  color: #000000;
   text-decoration: none;
   transition: 250ms ease;
 }
 
 .nav a:hover,
 .nav a:focus {
-  color: #ef4538;
+  color: #005FAA;
 }
 
 .nav li.open > a {
-  color: #ef4538;
+  color: #005FAA;
 }
 
 .nav a i {
@@ -891,7 +894,7 @@ hr::before {
   align-items: center;
   width: 50px;
   height: 100%;
-  color: #000;
+  color: #000000;
   font-size: 2rem;
   background: none;
   outline: none;
@@ -976,7 +979,7 @@ hr::before {
 
 .mobile_nav .drop {
   background: #f1f2f3;
-  border-left: 0.5em solid #ef4538;
+  border-left: 0.5em solid #005FAA;
 }
 
 .mobile_nav .drop li a {
@@ -1025,11 +1028,11 @@ footer {
 
 footer .container {
   text-align: center;
-  color: #000;
+  color: #000000;
 }
 
 footer a {
-  color: #000;
+  color: #000000;
 }
 
 footer .address {
@@ -1135,7 +1138,7 @@ footer .ewd img {
   cursor: pointer;
   outline: 0;
   border: 0;
-  color: #000;
+  color: #000000;
   top: 50%;
   right: 0;
   padding: 0 10px;
@@ -1154,7 +1157,7 @@ footer .ewd img {
   width: 100%;
   padding: 0.75em;
   padding-right: 3em;
-  color: #000;
+  color: #000000;
   font-style: italic;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -1169,7 +1172,7 @@ p.simplesearch-results,
 
 .simplesearch-highlight {
   font-weight: 600;
-  color: #ef4538;
+  color: #005FAA;
 }
 
 .search-result {
@@ -1229,7 +1232,7 @@ p.simplesearch-results,
   height: 2em;
   padding: 0.25em;
   margin: 0.25em;
-  color: #ef4538;
+  color: #005FAA;
   transition: 150ms ease;
   text-decoration: none;
 }
@@ -1265,7 +1268,7 @@ p.simplesearch-results,
   align-items: center;
   margin: 0;
   padding: 0.75em 1em;
-  background: #ef4538;
+  background: #005FAA;
   color: #fff;
   border-radius: 0.25em;
   line-height: 1;
@@ -1280,12 +1283,12 @@ p.simplesearch-results,
 }
 
 .button:hover, .button:focus {
-  background: #f37167;
+  background: #007cdd;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .button:active {
-  background: #e22112;
+  background: #004377;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   transform: translateY(1px);
 }
@@ -1297,13 +1300,13 @@ p.simplesearch-results,
 
 .button-reverse {
   background: #fff;
-  color: #ef4538;
+  color: #005FAA;
 }
 
 .button-ghost {
   background: transparent;
-  color: #ef4538;
-  border: 1px solid #ef4538;
+  color: #005FAA;
+  border: 1px solid #005FAA;
 }
 
 .button-secondary {
@@ -1312,7 +1315,7 @@ p.simplesearch-results,
 }
 
 .button-text {
-  color: #ef4538;
+  color: #005FAA;
   background: transparent;
 }
 
@@ -1497,7 +1500,7 @@ input[type="submit"].button {
 }
 
 .slick-dots li.slick-active {
-  background: #ef4538;
+  background: #005FAA;
 }
 
 .slick-dots li button {
@@ -1638,7 +1641,7 @@ input[type="submit"].button {
 }
 
 .blog-bar a.active {
-  color: #ef4538;
+  color: #005FAA;
 }
 
 .blog-bar button {
@@ -1718,6 +1721,20 @@ input[type="submit"].button {
   .introduction {
     margin: 1em auto;
   }
+}
+
+.projects .group {
+  margin: 0 -1.5em;
+}
+
+.projects .project-item {
+  width: calc(50% - 3em);
+  margin: 1.5em;
+}
+
+.projects .project-item a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .alt_rows {
