--- a/css/components/_projects.scss
+++ b/css/components/_projects.scss
@@ -8,10 +8,14 @@
         margin: 0 -1.5em;
     }
 
+    h2 {
+        text-align: center;
+    }
+
     .project-item {
         position: relative;
-        width: calc(50% - 3em);
-        margin: 1.5em;
+        width: calc(50% - 2em);
+        margin: 1em;
 
         a {
             text-decoration: none;
@@ -43,8 +47,8 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: rgba(0,0,0,0.5);
-                background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.65));
+                background: rgba(0,0,0,0.75);
+                background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.75));
                 transition: $transition-1;
             }
         }
@@ -66,7 +70,7 @@
         }
 
         .title {
-            opacity: 0.4;
+            opacity: 0.5;
             transition: $transition-1;
         }
 
