--- a/css/style.css
+++ b/css/style.css
@@ -1727,10 +1727,14 @@ input[type="submit"].button {
   margin: 0 -1.5em;
 }
 
+.projects h2 {
+  text-align: center;
+}
+
 .projects .project-item {
   position: relative;
-  width: calc(50% - 3em);
-  margin: 1.5em;
+  width: calc(50% - 2em);
+  margin: 1em;
 }
 
 .projects .project-item a {
@@ -1763,8 +1767,8 @@ input[type="submit"].button {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.65));
+  background: rgba(0, 0, 0, 0.75);
+  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.75));
   transition: 250ms ease;
 }
 
@@ -1785,7 +1789,7 @@ input[type="submit"].button {
 }
 
 .projects .project-item .title {
-  opacity: 0.4;
+  opacity: 0.5;
   transition: 250ms ease;
 }
 
