added intro photo + styling to misc

--- a/css/components/_introduction.scss
+++ b/css/components/_introduction.scss
@@ -1,9 +1,20 @@
 .introduction {
 
 	.container {
-	    max-width: 960px;
 	    padding: 1em;
-	    text-align: center;
+	}
+
+	.group {
+		align-items: center;
+	}
+
+	.image {
+		flex: 1;
+	}
+
+	.text {
+		flex: 2;
+		padding-left: 2em
 	}
 
 	@media (max-width: 768px) {
