--- a/css/components/_projects.scss
+++ b/css/components/_projects.scss
@@ -16,6 +16,7 @@
         position: relative;
         width: calc(50% - 2em);
         margin: 1em;
+        overflow: hidden;
 
         a {
             text-decoration: none;
@@ -25,6 +26,7 @@
             &:focus {
                 .image::before {
                     opacity: 1;
+                    transform: translate(0,0);
                 }
                 .date {
                     opacity: 0.75;
@@ -49,6 +51,7 @@
                 height: 100%;
                 background: rgba(0,0,0,0.75);
                 background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.75));
+                transform: translate(0, 3em);
                 transition: $transition-1;
             }
         }
