--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,9 @@
 @import 'components/instagram';
 @import 'components/introduction';
 @import 'components/projects';
+@import 'components/section-heading';
+@import 'components/team';
+@import 'components/testimonials';
 
 @import 'components/alternating_rows';
 @import 'components/slideshow';
