--- a/css/core/_general.scss
+++ b/css/core/_general.scss
@@ -37,7 +37,7 @@ html.wf-inactive {
 
 body {
     color: $color-0;
-    background: $color-grey-1;
+    background: #fff;
     font-family: $font-0;
     @include fs(16px);
 }
@@ -62,7 +62,6 @@ a {
 h1 {
     @include fluid('font-size', 2.5rem, 3.5rem);
     @include fluid('line-height', 1em, 1.2em);
-    text-transform: uppercase;
     font-weight: 600;
 }
 
