--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ html.wf-inactive {
 
 body {
   color: #000000;
-  background: #f1f2f3;
+  background: #fff;
   font-family: "Hind", sans-serif;
   font-size: 16px;
   font-size: 1rem;
@@ -448,7 +448,6 @@ a {
 }
 
 h1 {
-  text-transform: uppercase;
   font-weight: 600;
 }
 
@@ -812,6 +811,7 @@ hr::before {
 }
 
 .nav ul ul {
+  border-top: 6px solid #005FAA;
   border-radius: 0.25em;
   padding: 0;
   left: 0;
@@ -1021,39 +1021,159 @@ body.menu-open .mobile_nav {
 
 footer {
   width: 100%;
-  background: #f8f8f8;
-  padding: 1em;
-  margin: 1em 0 0;
+  background: #f1f2f3;
+  margin-top: 6em;
 }
 
-footer .container {
-  text-align: center;
-  color: #000000;
+.footer a:not(.button) {
+  text-decoration: none;
+  transition: 250ms ease;
 }
 
-footer a {
-  color: #000000;
+.footer .group {
+  justify-content: space-between;
+  margin: 3em auto 0;
 }
 
-footer .address {
-  margin: 0 auto 5px;
+.footer .group .group {
+  margin: 0;
 }
 
-footer .contact {
-  margin: 0 auto 5px;
+.footer .container > .group:last-of-type {
+  padding-top: 3em;
+  padding-bottom: 2em;
+  margin-top: 3em;
+  align-items: center;
 }
 
-footer .copyright {
-  margin: 0 auto 5px;
-}
-
-footer .ewd {
-  margin: 0 auto 5px;
-  width: 200px;
-}
-
-footer .ewd img {
+.footer .logo {
+  max-width: 500px;
   width: 100%;
+}
+
+.footer .logo img {
+  width: 100%;
+}
+
+.footer .logo {
+  max-width: 175px;
+}
+
+.footer .logo svg {
+  width: 100%;
+}
+
+.footer .section {
+  margin-left: 3em;
+}
+
+.footer .section h3,
+.footer .section a {
+  font-size: 1rem;
+}
+
+.footer .section a {
+  display: block;
+  margin: 0.35em 0;
+  line-height: 1.5;
+  opacity: 0.65;
+  color: inherit;
+  transition: 250ms ease;
+}
+
+.footer .section a:hover, .footer .section a:focus {
+  opacity: 1;
+}
+
+.footer ul {
+  list-style-type: none;
+  padding: 0;
+  line-height: 1;
+}
+
+.footer li {
+  padding: 0;
+}
+
+.footer .social-icons {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 1200px) {
+  .footer .tagline {
+    max-width: 100%;
+    flex: 1;
+  }
+}
+
+@media (max-width: 900px) {
+  .footer {
+    margin-top: 3em;
+  }
+  .footer .tagline {
+    margin: 0em auto 3em;
+  }
+  .footer .section {
+    margin-left: 0;
+    margin: 0;
+    padding: 1em;
+    width: 50%;
+    text-align: center;
+  }
+  .footer .section h3 {
+    font-size: 1.5rem;
+  }
+  .footer .links {
+    width: 100%;
+  }
+  .footer h2 {
+    text-align: center;
+  }
+  .footer .buttons {
+    justify-content: center;
+  }
+  .footer .social-icons {
+    margin-top: 1em;
+  }
+  .footer .section a {
+    margin: 0;
+    padding: 0.35em 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer .logo {
+    margin: 0 auto;
+  }
+  .footer .social-icons {
+    display: flex;
+    width: 100%;
+    order: -1;
+    margin-top: 0;
+    margin-bottom: 2em;
+    font-size: 1.5rem;
+  }
+  .footer .container > .group:last-of-type {
+    padding-top: 0;
+    margin-top: 0;
+  }
+  .footer .section {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .footer .group {
+    text-align: center;
+    justify-content: center;
+  }
+  .footer .tagline {
+    margin: 0em auto 1em;
+  }
+  .footer .container > .group:last-of-type {
+    padding-top: 0;
+    margin-top: 1.5em;
+  }
 }
 
 .layout.layout_sidebar, .layout.layout_two_columns, .layout.layout_full {
@@ -1342,11 +1462,13 @@ input[type="submit"].button {
 .carousel {
   margin: 0 auto;
   user-select: none;
+  margin-top: 1em;
 }
 
 .carousel .container {
   display: none;
   padding: 0;
+  max-width: 100%;
 }
 
 .carousel .container.slick-initialized {
@@ -1734,6 +1856,11 @@ input[type="submit"].button {
   }
 }
 
+.projects.projects-widget {
+  background: #f1f2f3;
+  padding: 3em 0;
+}
+
 .projects .group {
   margin: 0 -1.5em;
 }
@@ -1766,6 +1893,11 @@ input[type="submit"].button {
 
 .projects .project-item a:hover .title, .projects .project-item a:focus .title {
   opacity: 1;
+}
+
+.projects .project-item a:hover .arrow, .projects .project-item a:focus .arrow {
+  opacity: 1;
+  transform: translate(0, 0);
 }
 
 .projects .project-item .image {
@@ -1813,7 +1945,76 @@ input[type="submit"].button {
   right: 0;
   bottom: 0;
   padding: 1em;
+  opacity: 0;
+  transform: translate(-0.5em, 0);
   transition: 250ms ease;
+}
+
+.section-heading {
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+.section-heading p {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.team .team-item {
+  width: calc(25% - 2em);
+  margin: 1em;
+}
+
+.team .team-item .info {
+  margin: 0.5em 0;
+  text-align: center;
+}
+
+.team .team-item .name {
+  font-size: 1.25rem;
+}
+
+@media screen and (min-width: 38rem) {
+  .team .team-item .name {
+    font-size: calc(1.25rem + 0.25 * ((100vw - 38rem) / 32));
+  }
+}
+
+@media screen and (min-width: 70rem) {
+  .team .team-item .name {
+    font-size: 1.5rem;
+  }
+}
+
+.testimonials.testimonials-widget {
+  background: #f1f2f3;
+  padding: 3em 0;
+}
+
+.testimonials .testimonial-slider {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.testimonials .testimonial {
+  margin: 0 auto;
+  background: #fff;
+  text-align: center;
+  padding: 1em;
+  box-shadow: 0 2px 4px 0 rgba(50, 50, 93, 0.1);
+}
+
+.testimonials .testimonial .quotee {
+  margin-top: 1em;
+}
+
+.testimonials .slick-arrows .next {
+  left: 100%;
+}
+
+.testimonials .slick-arrows .prev {
+  right: 100%;
+  left: auto;
 }
 
 .alt_rows {
