refactored design based on input - stage 1

--- a/css/components/_projects.scss
+++ b/css/components/_projects.scss
@@ -33,7 +33,7 @@
                     opacity: 1;
                     transform: translate(0,0);
                 }
-                .date {
+                .category {
                     opacity: 0.75;
                     transform: translate(0,0);
                 }
@@ -74,7 +74,7 @@
             color: #fff;
         }
 
-        .date {
+        .category {
             font-weight: 600;
             opacity: 0;
             transform: translate(-0.5em, 0);
