--- a/css/core/_footer.scss
+++ b/css/core/_footer.scss
@@ -1,11 +1,15 @@
 footer {
     width: 100%;
-    background: $color-grey-1;
+    background: $color-1;
     margin-top: 6em;
 }
 
 footer .container {
+    color: #fff;
+}
 
+footer a {
+    color: #fff;
 }
 
 .footer a:not(.button) {
@@ -39,7 +43,7 @@ footer .container {
 }
 
 .footer .logo {
-    max-width: 175px;
+    max-width: 250px;
 }
 
 .footer .logo svg {
