--- a/css/core/_nav.scss
+++ b/css/core/_nav.scss
@@ -19,6 +19,7 @@
     display: block;
     color: $color-0;
     text-decoration: none;
+    text-transform: uppercase;
     transition: $transition-1;
 }
 
