--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,7 @@ body {
   font-family: "Hind", sans-serif;
   font-size: 16px;
   font-size: 1rem;
+  overflow-x: hidden;
 }
 
 p {
@@ -775,6 +776,7 @@ hr::before {
   display: block;
   color: #000000;
   text-decoration: none;
+  text-transform: uppercase;
   transition: 250ms ease;
 }
 
@@ -1021,8 +1023,16 @@ body.menu-open .mobile_nav {
 
 footer {
   width: 100%;
-  background: #f1f2f3;
+  background: #005FAA;
   margin-top: 6em;
+}
+
+footer .container {
+  color: #fff;
+}
+
+footer a {
+  color: #fff;
 }
 
 .footer a:not(.button) {
@@ -1056,7 +1066,7 @@ footer {
 }
 
 .footer .logo {
-  max-width: 175px;
+  max-width: 250px;
 }
 
 .footer .logo svg {
@@ -1886,7 +1896,7 @@ input[type="submit"].button {
   transform: translate(0, 0);
 }
 
-.projects .project-item a:hover .date, .projects .project-item a:focus .date {
+.projects .project-item a:hover .category, .projects .project-item a:focus .category {
   opacity: 0.75;
   transform: translate(0, 0);
 }
@@ -1927,7 +1937,7 @@ input[type="submit"].button {
   color: #fff;
 }
 
-.projects .project-item .date {
+.projects .project-item .category {
   font-weight: 600;
   opacity: 0;
   transform: translate(-0.5em, 0);
