--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -1,7 +1,8 @@
 .carousel {
     margin: 0 auto;
     user-select: none;
-    margin-top: 1em;
+    max-height: 100vh;
+    overflow: hidden;
 
     .container {
         display: none;
