--- a/css/core/_general.scss
+++ b/css/core/_general.scss
@@ -175,6 +175,14 @@ hr {
     border: none;
     text-align: center;
     font-size: 1.75rem;
+
+    &.line {
+        margin: 0.5em auto;
+        border: 1px solid rgba(255,255,255,0.25);
+        &::before {
+            display: none;
+        }
+    }
 }
 
 hr::before {
