--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -17,6 +17,7 @@
     .slide {
         user-select: none;
         width: 100%;
+        max-height: 100vh;
         position: relative;
         outline: none;
 
