--- a/css/components/_social-icons.scss
+++ b/css/components/_social-icons.scss
@@ -3,11 +3,11 @@
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
-    
+
     &:hover a,
     &:focus-within a {
         opacity: 0.5;
-    }  
+    }
 
     a {
         display: flex;
@@ -18,6 +18,8 @@
         padding: 0.25em;
         margin: 0.25em;
         color: $color-1;
+        background: #fff;
+        border-radius: 50%;
         transition: 150ms ease;
         text-decoration: none;
 
