--- a/css/core/_header.scss
+++ b/css/core/_header.scss
@@ -14,7 +14,7 @@
 
     .group {
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .logo {
